# AppaltiGPT

./: .gitignore  main.py  pyproject.toml
docs/: ALL_F1_prospetto_offerta.xls
notebook/: 01_Looking_for_chunking.py
notebook/__marimo__/session/: 01_Looking_for_chunking.py.json
src/: root_folders.py  settings.py
src/appalti_chat/: dependencies.py  main.py
src/appaltigpt/chunkizer/: __init__.py  prompt.py  schema.py  schema_converter.py
src/appaltigpt/chunkizer/adapters/: __init__.py  local_file_repository.py  mistral_document_converter.py  openai_client.py
src/appaltigpt/chunkizer/ports/: __init__.py  ai_client_port.py  document_converter_port.py  file_repository_port.py  vector_store_port.py
src/appaltigpt/chunkizer/services/: __init__.py  chunking.py
src/appaltigpt/embedder/adapters/: openai_embedding_model.py  sentence_transformer_embedding_model.py
src/appaltigpt/embedder/ports/: embedding_model_port.py
src/appaltigpt/rag/: service.py
src/appaltigpt/rag/adapters/: openai_generator.py
src/appaltigpt/rag/ports/: generator_port.py
src/appaltigpt/retrieval/HyDE/: service.py
src/appaltigpt/retrieval/HyDE/adapters/: openai_generator.py
src/appaltigpt/retrieval/HyDE/ports/: generator_port.py
src/appaltigpt/retrieval/hybrid/: service.py
src/appaltigpt/retrieval/ports/: keyword_search_port.py  retriever_port.py
src/appaltigpt/retrieval/semantic/: service.py
src/appaltigpt/retrieval/vector_search/ports/: search_port.py
src/appaltigpt/vector_store/qdrant/: keyword.py  reader.py  writer.py
